# find_nearest_toilet

./: .gitignore  README.md  app.py  fac_p_12.csv  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  taipei_toilet.csv  zbpack.json
data/: all_toilets.json  penghu_toilet.csv  taoyuan_toilet.csv
static/: manifest.json  service-worker.js
static/css/: output.css
templates/: index copy.html  index.html
