[project]
name = "find-nearest-toilet"
version = "0.1.0"
description = "使用政府開放資料的附近公廁尋找器 - AI Vibe Coding實驗專案"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "numpy>=1.21.0,<2.3.0",
    "pandas>=1.5.0,<2.3.0",
    "requests>=2.32.4",
    "gunicorn>=21.0.0",
]
authors = [
    {name = "AI Vibe Coding Project"}
]
keywords = ["flask", "taiwan", "open-data", "toilet-finder", "web-app"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Framework :: Flask",
]

[project.urls]
Repository = "https://github.com/your-username/find_nearest_toilet"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
